--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             </div>
             <div class="mobile__right">
               <div class="mobile__pic">
-                <img src="/img/mobile.png" alt="">
+                <img src="img/mobile.png" alt="">
               </div>
             </div>
           </div>
